--- a/unpackaged/main/default/layouts/Case-Case %28Sales%29 Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/Case-Case %28Sales%29 Layout.layout-meta.xml
@@ -95,6 +95,10 @@
                 <behavior>Required</behavior>
                 <field>Next_stage__c</field>
             </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Previous_stage__c</field>
+            </layoutItems>
         </layoutColumns>
         <layoutColumns>
             <layoutItems>
