--- a/unpackaged/main/default/layouts/Case-Case %28Marketing%29 Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/Case-Case %28Marketing%29 Layout.layout-meta.xml
@@ -88,7 +88,7 @@
                 <field>Reason</field>
             </layoutItems>
             <layoutItems>
-                <behavior>Edit</behavior>
+                <behavior>Required</behavior>
                 <field>State__c</field>
             </layoutItems>
             <layoutItems>
@@ -98,6 +98,22 @@
             <layoutItems>
                 <behavior>Edit</behavior>
                 <field>Primary_contact__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Pre_call_details__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Post_call_steps__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Next_stage__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Previous_stage__c</field>
             </layoutItems>
         </layoutColumns>
         <layoutColumns>
