Dev sandbox deployment

--- a/unpackaged/main/default/layouts/Case-Case %28Sales%29 Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/Case-Case %28Sales%29 Layout.layout-meta.xml
@@ -81,11 +81,19 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>State__c</field>
+                <field>Region__c</field>
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>Country__c</field>
+                <field>Support_details__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>High_Priority__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Next_stage__c</field>
             </layoutItems>
         </layoutColumns>
         <layoutColumns>
@@ -214,6 +222,8 @@
         <customLabel>false</customLabel>
         <detailHeading>false</detailHeading>
         <editHeading>false</editHeading>
+        <layoutColumns />
+        <layoutColumns />
         <layoutColumns />
         <style>CustomLinks</style>
     </layoutSections>
