--- a/unpackaged/main/default/layouts/Case-Case Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/Case-Case Layout.layout-meta.xml
@@ -81,11 +81,19 @@
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>State__c</field>
+                <field>Region__c</field>
             </layoutItems>
             <layoutItems>
                 <behavior>Edit</behavior>
-                <field>Country__c</field>
+                <field>Support_details__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>High_Priority__c</field>
+            </layoutItems>
+            <layoutItems>
+                <behavior>Edit</behavior>
+                <field>Next_stage__c</field>
             </layoutItems>
         </layoutColumns>
         <layoutColumns>
