--- a/unpackaged/main/default/layouts/Case-Case Layout.layout-meta.xml
+++ b/unpackaged/main/default/layouts/Case-Case Layout.layout-meta.xml
@@ -80,7 +80,7 @@
                 <field>Reason</field>
             </layoutItems>
             <layoutItems>
-                <behavior>Edit</behavior>
+                <behavior>Required</behavior>
                 <field>State__c</field>
             </layoutItems>
             <layoutItems>
